testsuite/tests/th/TH_InvalidTopDecl.hs
{-# LANGUAGE TemplateHaskell #-}
module TH_InvalidTopDecl where

import Language.Haskell.TH.Syntax

$(do decls <- [d| data Foo |]   -- #10853
     addTopDecls decls
     return [])
